fixed: text overflow hidden

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@
     padding: 1em;
     font-size: 1.5rem;
     position: relative;
+    overflow: hidden;
 }
 
 .current {
